fix home header container covering everything

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -27,7 +27,6 @@
     position: absolute;
     text-align: center;
     margin-top: 160px;
-    height: 100%;
 }
 
 .home_header {
